edited first exercise

--- a/week3/intro_to_pandas.ipynb
+++ b/week3/intro_to_pandas.ipynb
@@ -1245,14 +1245,31 @@
       "metadata": {
         "id": "2684gsWNinq9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cedc0ab8-a97b-45e5-97d7-041cf2c46155"
       },
       "cell_type": "code",
       "source": [
         "city_names.index"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RangeIndex(start=0, stop=3, step=1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
     },
     {
       "metadata": {
@@ -1281,14 +1298,94 @@
       "metadata": {
         "id": "sN0zUzSAj-U1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "0058be84-3328-403c-952c-831f6cd2afd9"
       },
       "cell_type": "code",
       "source": [
         "cities.reindex([2, 0, 1])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>City name</th>\n",
+              "      <th>Population</th>\n",
+              "      <th>Area square miles</th>\n",
+              "      <th>Population density</th>\n",
+              "      <th>San &amp; GT 50Sq miles</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sacramento</td>\n",
+              "      <td>485199</td>\n",
+              "      <td>97.92</td>\n",
+              "      <td>4955.055147</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>852469</td>\n",
+              "      <td>46.87</td>\n",
+              "      <td>18187.945381</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>San Jose</td>\n",
+              "      <td>1015785</td>\n",
+              "      <td>176.53</td>\n",
+              "      <td>5754.177760</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       City name  Population  Area square miles  Population density  \\\n",
+              "2     Sacramento      485199              97.92         4955.055147   \n",
+              "0  San Francisco      852469              46.87        18187.945381   \n",
+              "1       San Jose     1015785             176.53         5754.177760   \n",
+              "\n",
+              "   San & GT 50Sq miles  \n",
+              "2                False  \n",
+              "0                False  \n",
+              "1                 True  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
     },
     {
       "metadata": {
@@ -1305,14 +1402,94 @@
       "metadata": {
         "id": "mF8GC0k8uYhz",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "280c6885-4eab-4300-b7b7-4fc3516a6123"
       },
       "cell_type": "code",
       "source": [
         "cities.reindex(np.random.permutation(cities.index))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>City name</th>\n",
+              "      <th>Population</th>\n",
+              "      <th>Area square miles</th>\n",
+              "      <th>Population density</th>\n",
+              "      <th>San &amp; GT 50Sq miles</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sacramento</td>\n",
+              "      <td>485199</td>\n",
+              "      <td>97.92</td>\n",
+              "      <td>4955.055147</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>San Jose</td>\n",
+              "      <td>1015785</td>\n",
+              "      <td>176.53</td>\n",
+              "      <td>5754.177760</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>852469</td>\n",
+              "      <td>46.87</td>\n",
+              "      <td>18187.945381</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       City name  Population  Area square miles  Population density  \\\n",
+              "2     Sacramento      485199              97.92         4955.055147   \n",
+              "1       San Jose     1015785             176.53         5754.177760   \n",
+              "0  San Francisco      852469              46.87        18187.945381   \n",
+              "\n",
+              "   San & GT 50Sq miles  \n",
+              "2                False  \n",
+              "1                 True  \n",
+              "0                False  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
     },
     {
       "metadata": {
@@ -1340,14 +1517,115 @@
       "metadata": {
         "id": "PN55GrDX0jzO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "43e62291-1443-403f-fca2-a1a623030b31"
       },
       "cell_type": "code",
       "source": [
-        "# Your code here"
+        "# Your code here\n",
+        "cities.reindex([3,2, 0, 1,4])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>City name</th>\n",
+              "      <th>Population</th>\n",
+              "      <th>Area square miles</th>\n",
+              "      <th>Population density</th>\n",
+              "      <th>San &amp; GT 50Sq miles</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sacramento</td>\n",
+              "      <td>485199.0</td>\n",
+              "      <td>97.92</td>\n",
+              "      <td>4955.055147</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>852469.0</td>\n",
+              "      <td>46.87</td>\n",
+              "      <td>18187.945381</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>San Jose</td>\n",
+              "      <td>1015785.0</td>\n",
+              "      <td>176.53</td>\n",
+              "      <td>5754.177760</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       City name  Population  Area square miles  Population density  \\\n",
+              "3            NaN         NaN                NaN                 NaN   \n",
+              "2     Sacramento    485199.0              97.92         4955.055147   \n",
+              "0  San Francisco    852469.0              46.87        18187.945381   \n",
+              "1       San Jose   1015785.0             176.53         5754.177760   \n",
+              "4            NaN         NaN                NaN                 NaN   \n",
+              "\n",
+              "  San & GT 50Sq miles  \n",
+              "3                 NaN  \n",
+              "2               False  \n",
+              "0               False  \n",
+              "1                True  \n",
+              "4                 NaN  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
     },
     {
       "metadata": {
